feat: implement full i18n support (BE/UK) for landing and modals
- Added i18next core logic with dynamic JSON loading
- Implemented language switcher with persistent state in localStorage
- Added 'data-i18n' attributes to:
    * Header (desktop and mobile navigation)
    * Hero, About, History, Volunteers, and Partners sections
    * Footer and common site slogans
- Refactored 'modalTemplates.js' to support dynamic translation of template literals
- Created 'be.json' and 'uk.json' with unified key structure
- Fixed mobile menu links and layout localization

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vite-plugin-html-inject": "^1.1.2"
   },
   "dependencies": {
+    "i18next": "^25.8.7",
     "photoswipe": "^5.4.4",
     "swiper": "^12.1.0"
   }
