--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,19 @@
 {
   "version": 2,
+  "cleanUrls": true,
+  "trailingSlash": false,
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/index.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
-    }
+    { "source": "/api/(.*)", "destination": "/api/index.js" },
+    { "source": "/history", "destination": "/pages/history.html" },
+    { "source": "/zarok-vajara", "destination": "/pages/zarok-vajara.html" },
+    { "source": "/projects", "destination": "/pages/projects.html" },
+    { "source": "/reports", "destination": "/pages/reports.html" },
+    { "source": "/materials", "destination": "/pages/materials.html" },
+    { "source": "/contacts", "destination": "/pages/contacts.html" },
+    { "source": "/gallery", "destination": "/pages/gallery.html" },
+    { "source": "/get-help", "destination": "/pages/get-help.html" },
+    { "source": "/donate", "destination": "/pages/donate.html" },
+    { "source": "/news-full", "destination": "/pages/news-full.html" },
+    { "source": "/privacy", "destination": "/privacy.html" }
   ]
 }
